// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonElements/Styled ActiveButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Trade Gothic Bold Condensed',Arial,sans-serif;
  font-size: 16px;
  line-height: 1;
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 12px 25px 8px;
}

.c1 {
  color: rgba(255,255,255,1);
  background-color: rgba(37,49,134,1);
}

.c1 svg,
.c1 .tofill {
  fill: rgba(255,255,255,1);
}

.c1:disabled {
  color: rgba(0,0,0,0.65);
  background-color: rgba(0,0,0,0.15);
}

.c1:disabled svg,
.c1:disabled .tofill {
  fill: rgba(0,0,0,0.65);
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    padding: 13px 25px 10px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

<button
  className="c0 c1"
/>
`;

exports[`ButtonElements/Styled AngleArrowLeftIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={21}
  viewBox="0 0 21 21"
  width={21}
>
  <path
    className="tofill"
    d="M7.945 6.648l-5.797 5.797a.48.48 0 01-.351.149.48.48 0 01-.352-.149L.148 11.148A.48.48 0 010 10.797a.48.48 0 01.148-.352l4.149-4.148L.148 2.148A.48.48 0 010 1.797a.48.48 0 01.148-.352L1.445.148A.48.48 0 011.797 0a.48.48 0 01.351.148l5.797 5.797a.48.48 0 01.149.352.48.48 0 01-.149.351z"
    transform="rotate(-180 7 9)"
  />
</svg>
`;

exports[`ButtonElements/Styled ButtonsWrapperStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 10px 0;
}

@media (min-width:767px) {
  .c0 {
    -webkit-flex-flow: row;
    -ms-flex-flow: row;
    flex-flow: row;
    margin: 20px 0;
  }
}

<div
  className="c0"
/>
`;

exports[`ButtonElements/Styled ChildIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={16}
  viewBox="0 0 12 16"
  width={12}
>
  <path
    className="tofill"
    d="M3.75 2.25a2.25 2.25 0 1 1 4.5 0 2.25 2.25 0 0 1-4.5 0zm7.957.043a1 1 0 0 0-1.414 0L7.586 5H4.414L1.707 2.293A1 1 0 1 0 .293 3.707L3.25 6.664V15a1 1 0 0 0 1 1h.5a1 1 0 0 0 1-1v-3.5h.5V15a1 1 0 0 0 1 1h.5a1 1 0 0 0 1-1V6.664l2.957-2.957a1 1 0 0 0 0-1.414z"
  />
</svg>
`;

exports[`ButtonElements/Styled ClappingIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={20}
  viewBox="0 0 18 20"
  width={18}
>
  <path
    d="M20.987 14.262a.291.291 0 0 0-.008-.036l-.058-.205c-.238-.89-1.731-1.754-2.619-1.515a.334.334 0 0 0 .173.645c.531-.143 1.66.51 1.803 1.047l.054.19a.085.085 0 0 1 0 .033c-.155.05-.864.276-1.258.382-.405.109-.827.248-1.266.406-.17-1.242-.513-2.531-1.022-4.437l-1.208-4.516c-.27-1.01-1.164-1.416-1.873-1.226a1.433 1.433 0 0 0-.74.491l-.245-.918c-.267-.996-1.184-1.41-1.879-1.224-.29.078-.559.27-.756.535a1.633 1.633 0 0 0-.66-.702 1.662 1.662 0 0 0-1.259-.152 1.668 1.668 0 0 0-1.014.758 1.618 1.618 0 0 0-.171.409 1.653 1.653 0 0 0-.06-.034c-.363-.195-.804-.237-1.244-.12-.43.116-.79.393-1.012.779a1.66 1.66 0 0 0-.167 1.267l.919 3.435a5.64 5.64 0 0 0-.956 1.885.334.334 0 0 0 .642.182c.14-.496.353-.912.54-1.219l1.012 3.781a.334.334 0 0 0 .644-.173L5.142 5.946a.997.997 0 0 1 .1-.76.993.993 0 0 1 .607-.467c.275-.074.544-.052.757.062.225.122.387.345.468.646l1.812 6.775a.333.333 0 1 0 .643-.173L7.632 4.932a1 1 0 0 1 .093-.773c.131-.222.35-.383.614-.454.262-.07.532-.039.758.089.229.13.394.35.466.62l1.898 7.096a.333.333 0 1 0 .644-.173l-1.639-6.13c-.166-.622.218-1.095.548-1.183.323-.087.885.091 1.062.752l1.64 6.129a.334.334 0 0 0 .644-.173l-1.035-3.871c-.097-.364-.013-.632.074-.792a.793.793 0 0 1 .478-.394c.393-.104.895.149 1.057.754l1.208 4.517c.998 3.73 1.348 5.042.97 8.382l-7.247 1.945c-1.614-3.051-5.088-5.835-7.08-6.987a35.236 35.236 0 0 1-1.118-.696.191.191 0 0 1 .01-.031l.103-.173c.126-.219.49-.436.93-.554.438-.118.863-.112 1.08.014l1.563.904a.334.334 0 0 0 .333-.579l-1.562-.904c-.375-.216-.968-.246-1.587-.08-.62.167-1.118.49-1.332.86l-.111.188a.3.3 0 0 0-.017.032c-.146.32-.082.635.173.845.01.008.02.016.03.022.032.02.761.493 1.172.73 1.97 1.14 5.438 3.924 6.931 6.93a.334.334 0 0 0 .39.196l.009-.002 7.722-2.074a.333.333 0 0 0 .244-.282c.184-1.539.226-2.661.135-3.74.48-.178.931-.328 1.363-.444a36.826 36.826 0 0 0 1.356-.415c.3-.137.444-.425.385-.771z"
    stroke="#000"
    strokeWidth={0.5}
    transform="matrix(.85848 0 0 .89993 -.241 -.022)"
  />
  <path
    d="M12.607 2.998c.346-.36.831-.387 1.112-.231.31.173.572.736.235 1.301v.001a.332.332 0 0 0 .128.463.358.358 0 0 0 .479-.126l.525-.877c.3-.501.916-.661 1.435-.372.527.294.69.878.385 1.387l-.167.28-.537.783a.331.331 0 0 0 .098.469.36.36 0 0 0 .486-.096l.541-.789.004-.01.007-.007v-.001c.388-.646.996-.615 1.435-.37.243.136.417.355.49.617a.978.978 0 0 1-.105.77l-1.975 3.303a.332.332 0 0 0 .128.462.36.36 0 0 0 .479-.124l1.974-3.303a1.63 1.63 0 0 0 .176-1.283 1.687 1.687 0 0 0-.816-1.027c-.456-.254-.935-.313-1.363-.194.003-.58-.311-1.13-.89-1.453a1.773 1.773 0 0 0-2.18.333 1.451 1.451 0 0 0-.622-.723c-.528-.294-1.377-.266-1.975.358a.33.33 0 0 0 .018.478.36.36 0 0 0 .495-.019z"
    stroke="#000"
    strokeWidth={0.5}
    transform="matrix(.85848 0 0 .89993 -.241 -.022)"
  />
  <path
    d="M3.685 1.468a.403.423 0 0 0 .542.19.407.427 0 0 0 .181-.57L4.003.236a.403.422 0 0 0-.542-.19.406.426 0 0 0-.18.571zM1.333 3.28a.403.422 0 0 0 .573 0 .407.427 0 0 0 0-.602l-.81-.85a.403.423 0 0 0-.571 0 .407.427 0 0 0 0 .6zM.406 5.959h.809a.406.426 0 0 0 0-.851H.406a.406.426 0 0 0 0 .851zm0 2.979a.403.423 0 0 0 .128-.022l1.213-.425a.407.427 0 0 0-.255-.809l-1.214.426a.407.427 0 0 0 .128.83z"
  />
</svg>
`;

exports[`ButtonElements/Styled CloseButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  border: none;
  background-color: transparent;
}

.c1 {
  position: absolute;
  top: 20px;
  right: 20px;
  fill: rgba(37,49,134,1);
  z-index: 1;
  font-size: 16px;
}

.c1 .tofill {
  fill: rgba(0,0,0,0.65);
}

@media (min-width:767px) {
  .c1 {
    top: 30px;
    right: 30px;
  }
}

<button
  className="c0 c1"
/>
`;

exports[`ButtonElements/Styled EmailIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={12}
  viewBox="0 0 16 12"
  width={16}
>
  <path
    d="M15.58.4a1.41 1.41 0 0 0-1.009-.4H1.43C1.037 0 .7.133.42.4.14.669 0 .99 0 1.365v9.272c0 .376.14.696.42.963.28.268.616.401 1.009.401H14.57c.393 0 .73-.133 1.01-.4.28-.268.419-.589.419-.964V1.364c0-.375-.14-.696-.42-.963zm-.723 10.236a.256.256 0 0 1-.085.192.28.28 0 0 1-.2.08H1.428a.28.28 0 0 1-.201-.08.256.256 0 0 1-.085-.192V4.091c.19.204.396.392.616.562a124.21 124.21 0 0 1 3.804 2.881c.303.244.55.435.74.571a4.2 4.2 0 0 0 .773.413c.324.14.63.209.915.209h.018c.286 0 .59-.07.915-.209a4.2 4.2 0 0 0 .773-.413c.19-.136.437-.327.74-.571.941-.75 2.209-1.71 3.804-2.88.22-.171.426-.359.616-.563zm0-9.05v.093c0 .335-.138.709-.415 1.12-.277.413-.576.74-.897.985-1.15.864-2.342 1.764-3.58 2.702l-.313.25c-.173.14-.31.247-.411.32a8.288 8.288 0 0 1-.397.27 2.42 2.42 0 0 1-.451.234 1.104 1.104 0 0 1-.384.076H7.99c-.119 0-.247-.026-.384-.076a2.417 2.417 0 0 1-.45-.235 8.27 8.27 0 0 1-.398-.268c-.101-.074-.238-.18-.41-.32l-.313-.251a1306.1 1306.1 0 0 0-3.58-2.702c-.876-.66-1.313-1.466-1.313-2.42 0-.074.028-.138.085-.192a.281.281 0 0 1 .2-.081h13.144c.047.025.089.032.125.021.035-.011.062.01.08.064.018.054.034.08.049.077.015-.003.024.032.027.106l.004.111v.115z"
  />
</svg>
`;

exports[`ButtonElements/Styled ForwardIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={16}
  viewBox="0 0 10 16"
  width={10}
>
  <path
    className="tofill"
    d="M9.814.212a.583.583 0 0 0-.44-.197h-1.25a.583.583 0 0 0-.439.197A.661.661 0 0 0 7.5.68v7.05a.665.665 0 0 0-.128-.198L.44.15C.316.018.212-.027.127.015.042.057 0 .168 0 .348v15.304c0 .18.042.291.127.333.085.042.189-.004.312-.136l6.934-7.381A.91.91 0 0 0 7.5 8.27v7.05c0 .18.062.336.185.467.124.132.27.198.44.198h1.25c.17 0 .316-.066.44-.198a.66.66 0 0 0 .185-.468V.68a.663.663 0 0 0-.186-.468z"
  />
</svg>
`;

exports[`ButtonElements/Styled GreyButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Trade Gothic Bold Condensed',Arial,sans-serif;
  font-size: 16px;
  line-height: 1;
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 12px 25px 8px;
}

.c1 {
  color: rgba(0,0,0,0.65);
  background-color: rgba(0,0,0,0.15);
}

.c1 svg {
  fill: rgba(0,0,0,0.65);
}

.c1:hover,
.c1:focus {
  color: rgba(0,0,0,0.65);
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    padding: 13px 25px 10px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

<button
  className="c0 c1"
/>
`;

exports[`ButtonElements/Styled LinkIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={14}
  viewBox="0 0 14 14"
  width={14}
>
  <path
    className="tofill"
    d="M13.278 8.543L11.494 6.76a2.382 2.382 0 00-1.75-.72c-.698 0-1.292.251-1.784.754l-.755-.754c.503-.492.755-1.09.755-1.793 0-.686-.237-1.267-.712-1.741L5.48.729A2.35 2.35 0 003.73 0c-.685 0-1.265.237-1.74.712L.73 1.964A2.34 2.34 0 000 3.706c0 .686.24 1.27.72 1.75l1.785 1.783c.48.48 1.063.721 1.75.721.697 0 1.292-.252 1.783-.755l.755.755a2.413 2.413 0 00-.755 1.793c0 .686.238 1.266.712 1.74l1.768 1.776a2.35 2.35 0 001.75.73c.685 0 1.266-.238 1.74-.713l1.261-1.252a2.34 2.34 0 00.73-1.741c0-.686-.24-1.27-.721-1.75zm-7.24-3.67l-.158-.164a5.32 5.32 0 00-.184-.184 2.074 2.074 0 00-.163-.129.691.691 0 00-.455-.141.794.794 0 00-.583.24.794.794 0 00-.24.583.689.689 0 00.141.455c.054.074.097.128.129.163.031.034.093.095.184.184l.163.159a.83.83 0 01-.618.266.79.79 0 01-.583-.232L1.887 4.29a.794.794 0 01-.24-.583c0-.223.08-.415.24-.575l1.26-1.252a.828.828 0 01.584-.232c.229 0 .423.08.584.24L6.08 3.663c.16.16.24.354.24.583 0 .24-.094.449-.282.626zm6.074 5.994L10.85 12.12a.827.827 0 01-.584.223.79.79 0 01-.583-.232l-1.767-1.775a.794.794 0 01-.24-.583c0-.24.095-.45.283-.627l.159.163c.089.092.15.153.185.185.034.031.088.074.162.129a.687.687 0 00.455.141c.229 0 .423-.08.583-.24.16-.16.24-.354.24-.583a.686.686 0 00-.142-.455 2.07 2.07 0 00-.128-.163 5.695 5.695 0 00-.184-.184 35.733 35.733 0 01-.163-.159.817.817 0 01.617-.274c.229 0 .423.08.583.24L12.11 9.71c.16.16.24.355.24.583 0 .223-.08.415-.24.574z"
  />
</svg>
`;

exports[`ButtonElements/Styled LockIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={16}
  viewBox="0 0 13 16"
  width={13}
>
  <path
    className="tofill"
    d="M12.684 7.59a1.041 1.041 0 0 0-.768-.317h-.36V5.09c0-1.394-.497-2.59-1.49-3.59S7.884 0 6.5 0 3.927.5 2.934 1.5c-.993 1-1.49 2.197-1.49 3.59v2.183h-.36c-.302 0-.557.106-.768.318-.21.212-.316.47-.316.773v6.545c0 .303.105.56.316.773.21.212.466.318.767.318h10.834c.3 0 .556-.106.767-.318.21-.212.316-.47.316-.773V8.364c0-.303-.105-.56-.316-.773zm-3.295-.317H3.61V5.09c0-.803.282-1.489.846-2.057A2.774 2.774 0 0 1 6.5 2.182c.798 0 1.478.284 2.043.852.564.568.846 1.254.846 2.057z"
  />
</svg>
`;

exports[`ButtonElements/Styled MapMarkerIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={16}
  viewBox="0 0 10 16"
  width={10}
>
  <path
    d="M8.535 1.562C7.56.521 6.38 0 5 0 3.62 0 2.441.52 1.465 1.562.488 2.604 0 3.861 0 5.333c0 .757.107 1.379.322 1.865l3.565 8.063c.097.229.249.41.454.54a1.197 1.197 0 0 0 1.318 0c.205-.13.36-.311.464-.54l3.555-8.063C9.893 6.712 10 6.09 10 5.333c0-1.472-.488-2.729-1.465-3.77zM6.768 7.22C6.279 7.74 5.69 8 5 8s-1.28-.26-1.768-.78C2.744 6.699 2.5 6.07 2.5 5.334s.244-1.364.732-1.885c.489-.52 1.078-.781 1.768-.781s1.28.26 1.768.78c.488.522.732 1.15.732 1.886s-.244 1.365-.732 1.886z"
  />
</svg>
`;

exports[`ButtonElements/Styled PaperPlaneIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={16}
  viewBox="0 0 16 16"
  width={16}
>
  <path
    className="tofill"
    d="M14.876.1L.39 8.457a.75.75 0 0 0 .07 1.35L3.781 11.2l8.98-7.911c.171-.153.415.081.268.26L5.5 12.717v2.514a.75.75 0 0 0 1.329.494l1.984-2.415 3.894 1.63a.752.752 0 0 0 1.032-.568L15.989.876A.75.75 0 0 0 14.876.1z"
  />
</svg>
`;

exports[`ButtonElements/Styled PencilIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={16}
  viewBox="0 0 16 16"
  width={16}
>
  <path
    className="tofill"
    d="M0 11.607V16h4.393l8.787-8.787L8.787 2.82zm3.834 3.041h-1.13v-1.352H1.352v-1.13l.96-.96 2.483 2.481zm5.29-10.033c.156 0 .233.078.233.233 0 .07-.024.13-.074.18L3.56 10.75a.245.245 0 0 1-.18.074c-.154 0-.232-.078-.232-.232 0-.07.025-.13.074-.18L8.945 4.69a.244.244 0 0 1 .18-.074zm6.486-1.743L13.126.402a1.312 1.312 0 0 0-.96-.402c-.381 0-.698.134-.951.401L9.463 2.144l4.393 4.393 1.753-1.753c.26-.26.391-.577.391-.95 0-.366-.13-.687-.39-.962z"
  />
</svg>
`;

exports[`ButtonElements/Styled PlayIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={16}
  viewBox="0 0 13.8 16.1"
  width={14}
>
  <path
    className="tofill"
    d="M13.573 7.726L.55.078C.4-.014.271-.024.163.046.057.116 0 .238 0 .418v15.263c0 .18.057.303.162.373.109.07.237.06.39-.031l13.02-7.65c.153-.09.228-.198.228-.32 0-.126-.077-.234-.227-.325zm0 0"
  />
</svg>
`;

exports[`ButtonElements/Styled ProposalIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

.c0.closed {
  margin: 0;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

@media (min-width:767px) {
  .c0.closed {
    margin-right: 5px;
  }
}

<svg
  className="c0"
  height={16}
  viewBox="0 0 16 16"
  width={16}
>
  <path
    className="tofill"
    d="M0 11.607V16h4.393l8.787-8.787L8.787 2.82zm3.834 3.041h-1.13v-1.352H1.352v-1.13l.96-.96 2.483 2.481zm5.29-10.033c.156 0 .233.078.233.233 0 .07-.024.13-.074.18L3.56 10.75a.245.245 0 0 1-.18.074c-.154 0-.232-.078-.232-.232 0-.07.025-.13.074-.18L8.945 4.69a.244.244 0 0 1 .18-.074zm6.486-1.743L13.126.402a1.312 1.312 0 0 0-.96-.402c-.381 0-.698.134-.951.401L9.463 2.144l4.393 4.393 1.753-1.753c.26-.26.391-.577.391-.95 0-.366-.13-.687-.39-.962z"
  />
</svg>
`;

exports[`ButtonElements/Styled QualifyButtonStyle snapshot by default 1`] = `
.c0 {
  font-family: 'Circular Standard Bold',Arial,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  border-width: 2px;
  font-size: 12px;
  line-height: 20px;
  border-style: solid;
  padding: 0 10px;
  border-radius: 36px;
  background-color: rgba(255,255,255,1);
}

.c0.qualified {
  color: rgba(255,255,255,1);
}

@media (min-width:1140px) {
  .c0 {
    font-size: 16px;
    line-height: 26px;
  }
}

<button
  className="c0"
/>
`;

exports[`ButtonElements/Styled RedButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Trade Gothic Bold Condensed',Arial,sans-serif;
  font-size: 16px;
  line-height: 1;
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 12px 25px 8px;
}

.c1 {
  color: rgba(255,255,255,1);
  background-color: rgba(37,49,134,1);
}

.c1 svg {
  fill: rgba(255,255,255,1);
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    padding: 13px 25px 10px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

<button
  className="c0 c1"
/>
`;

exports[`ButtonElements/Styled RedLinkButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  border: none;
  background-color: transparent;
}

.c1 {
  display: inline-block;
  color: rgba(37,49,134,1);
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin: 0 5px;
}

<button
  className="c0 c1"
/>
`;

exports[`ButtonElements/Styled SaveFileIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={16}
  viewBox="0 0 16 16"
  width={16}
>
  <path
    className="tofill"
    d="M15.775 4.412c-.139-.333-.305-.597-.5-.79L12.362.706c-.194-.194-.458-.36-.791-.499A2.402 2.402 0 0010.655 0H1a.963.963 0 00-.708.291.963.963 0 00-.29.708v13.985c0 .278.096.514.29.708.195.194.43.291.708.291h13.985a.964.964 0 00.708-.291.964.964 0 00.29-.708V5.328c0-.278-.068-.583-.207-.916zM6.66 1.665a.32.32 0 01.099-.234.32.32 0 01.234-.099H8.99a.32.32 0 01.234.099.32.32 0 01.099.234v3.33a.32.32 0 01-.1.234.32.32 0 01-.233.099H6.993a.32.32 0 01-.234-.1.32.32 0 01-.1-.233v-3.33zm5.327 12.986H3.996v-3.996h7.991v3.996zm2.664 0H13.32v-4.329a.964.964 0 00-.291-.707.963.963 0 00-.708-.292H3.663a.964.964 0 00-.708.292.964.964 0 00-.291.707v4.33H1.332V1.331h1.332V5.66c0 .277.097.513.291.707.194.194.43.291.708.291h5.994a.963.963 0 00.707-.29.964.964 0 00.291-.708V1.33c.104 0 .24.035.406.105.167.07.285.138.354.208l2.924 2.924c.07.07.139.19.208.359.07.17.104.304.104.4v9.324z"
  />
</svg>
`;

exports[`ButtonElements/Styled SignOutIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={13}
  viewBox="0 0 16 13"
  width={16}
>
  <path
    className="tofill"
    d="M6.53 12.025a.263.263 0 0 1-.02-.137c.007-.037-.017-.068-.071-.092-.055-.023-.082-.042-.082-.055 0-.014-.039-.024-.117-.03l-.118-.011H2.94c-.45 0-.834-.16-1.153-.478-.32-.318-.48-.7-.48-1.147v-7.15c0-.447.16-.83.48-1.148.32-.318.704-.477 1.153-.477h3.265a.31.31 0 0 0 .21-.066.337.337 0 0 0 .101-.198 1.701 1.701 0 0 0 .026-.508 4.648 4.648 0 0 1-.01-.203.312.312 0 0 0-.097-.229.315.315 0 0 0-.23-.096H2.939C2.129 0 1.437.286.862.858A2.81 2.81 0 0 0 0 2.925v7.15c0 .806.287 1.495.862 2.067A2.837 2.837 0 0 0 2.94 13h3.265a.31.31 0 0 0 .21-.066.337.337 0 0 0 .101-.198 1.705 1.705 0 0 0 .026-.508 4.542 4.542 0 0 1-.01-.203z"
  />
  <path
    className="tofill"
    d="M15.806 6.043L10.256.518a.63.63 0 0 0-.46-.193.63.63 0 0 0-.46.193.623.623 0 0 0-.193.457V3.9H4.57a.63.63 0 0 0-.459.193.623.623 0 0 0-.194.457v3.9c0 .176.065.328.194.457a.63.63 0 0 0 .46.193h4.57v2.925a.62.62 0 0 0 .195.457.63.63 0 0 0 .459.193.63.63 0 0 0 .46-.193l5.55-5.525A.623.623 0 0 0 16 6.5a.624.624 0 0 0-.194-.457z"
  />
</svg>
`;

exports[`ButtonElements/Styled SmallGreyButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Trade Gothic Bold Condensed',Arial,sans-serif;
  font-size: 16px;
  line-height: 1;
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 12px 25px 8px;
}

.c1 {
  color: rgba(0,0,0,0.65);
  background-color: rgba(0,0,0,0.15);
}

.c1 svg {
  fill: rgba(0,0,0,0.65);
}

.c1:hover,
.c1:focus {
  color: rgba(0,0,0,0.65);
}

.c2 {
  padding: 5px 15px 2.5px;
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    padding: 13px 25px 10px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

@media (min-width:767px) {
  .c2 {
    padding: 10px 20px;
  }
}

<button
  className="c0 c1 c2"
/>
`;

exports[`ButtonElements/Styled SmallRedButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Trade Gothic Bold Condensed',Arial,sans-serif;
  font-size: 16px;
  line-height: 1;
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 12px 25px 8px;
}

.c1 {
  color: rgba(255,255,255,1);
  background-color: rgba(37,49,134,1);
}

.c1 svg {
  fill: rgba(255,255,255,1);
}

.c2 {
  padding: 5px 15px 2.5px;
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    padding: 13px 25px 10px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

@media (min-width:767px) {
  .c2 {
    padding: 10px 20px;
  }
}

<button
  className="c0 c1 c2"
/>
`;

exports[`ButtonElements/Styled SuitcaseIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={14}
  viewBox="0 0 16 14"
  width={16}
>
  <path
    className="tofill"
    d="M.59 2.935c-.394.401-.59.881-.59 1.44v7.583c0 .56.196 1.04.59 1.44C.981 13.8 1.451 14 2 14h.571V2.333H2c-.548 0-1.018.2-1.41.602zM11.429.875a.853.853 0 0 0-.25-.62A.818.818 0 0 0 10.57 0H5.43a.818.818 0 0 0-.608.255.853.853 0 0 0-.25.62v1.458H3.43V14h9.143V2.333H11.43zm-1.143 1.458H5.714V1.167h4.572zm5.124.602A1.906 1.906 0 0 0 14 2.333h-.571V14H14c.548 0 1.018-.2 1.41-.602.394-.4.59-.88.59-1.44V4.375c0-.559-.197-1.039-.59-1.44z"
  />
</svg>
`;

exports[`ButtonElements/Styled ThumbsUpIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={25}
  viewBox="0 0 25 25"
  width={25}
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      className="tofill"
      d="M5.388 20.031c.17-.17.255-.37.255-.602a.824.824 0 00-.255-.603.824.824 0 00-.602-.255.824.824 0 00-.603.255.824.824 0 00-.254.603.82.82 0 00.254.602c.17.17.37.255.603.255a.824.824 0 00.602-.255zm15.683-8.317c0-.455-.174-.855-.522-1.198-.348-.344-.745-.516-1.192-.516h-4.714c0-.518.214-1.23.643-2.136.428-.906.643-1.623.643-2.15 0-.875-.143-1.522-.429-1.942-.286-.42-.857-.63-1.714-.63-.232.233-.402.612-.51 1.14a24.555 24.555 0 01-.408 1.68c-.165.594-.43 1.083-.797 1.467-.196.205-.54.611-1.03 1.218-.037.045-.14.179-.309.402a26.028 26.028 0 01-.884 1.118 7.61 7.61 0 01-.536.59c-.16.156-.332.314-.515.475a2.31 2.31 0 01-.536.362 1.15 1.15 0 01-.475.12h-.429v8.572h.429c.116 0 .256.013.422.04.165.027.312.056.442.087.129.031.299.08.508.147a20.982 20.982 0 01.945.322c.214.076.343.122.388.14 1.884.652 3.41.978 4.58.978h1.621c1.714 0 2.571-.746 2.571-2.237 0-.232-.022-.482-.067-.75.268-.142.48-.377.637-.703a2.26 2.26 0 00.234-.984c0-.33-.08-.638-.241-.924.473-.447.71-.978.71-1.594 0-.223-.045-.47-.134-.743-.09-.273-.201-.485-.335-.636.286-.01.525-.22.716-.63.192-.41.288-.772.288-1.085zm1.715-.013c0 .795-.219 1.522-.657 2.183.08.295.121.603.121.924 0 .688-.17 1.33-.509 1.929.027.187.04.38.04.575 0 .902-.268 1.697-.803 2.384.009 1.242-.37 2.221-1.139 2.94-.768.719-1.781 1.078-3.04 1.078h-1.728c-.857 0-1.703-.1-2.538-.301-.834-.2-1.8-.493-2.9-.877C8.599 22.179 7.984 22 7.787 22H3.929c-.474 0-.878-.167-1.212-.502a1.652 1.652 0 01-.503-1.212v-8.572c0-.473.168-.877.503-1.212A1.652 1.652 0 013.929 10h3.67c.32-.214.932-.906 1.834-2.076a25.8 25.8 0 011.433-1.714c.214-.223.373-.605.476-1.145.102-.54.238-1.105.408-1.694.17-.59.446-1.072.83-1.447a1.7 1.7 0 011.206-.495c.75 0 1.424.145 2.022.435.598.29 1.054.743 1.366 1.36.313.615.469 1.446.469 2.49 0 .83-.214 1.688-.643 2.572h2.357c.929 0 1.732.339 2.41 1.018.68.678 1.019 1.477 1.019 2.397z"
      fill="#fff"
    />
    <path
      d="M0 0h25v25H0z"
    />
  </g>
</svg>
`;

exports[`ButtonElements/Styled UnstyledButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  border: none;
  background-color: transparent;
}

<button
  className="c0"
/>
`;

exports[`ButtonElements/Styled UserIconStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin-right: 5px;
  width: 14px;
  height: 14px;
}

@media (min-width:767px) {
  .c0 {
    width: 16px;
    height: 16px;
  }
}

<svg
  className="c0"
  height={16}
  viewBox="0 0 14 16"
  width={14}
>
  <path
    className="tofill"
    d="M7 8c1.054 0 1.954-.39 2.7-1.172.745-.781 1.118-1.724 1.118-2.828 0-1.104-.373-2.047-1.118-2.828C8.954.39 8.054 0 7 0 5.946 0 5.046.39 4.3 1.172 3.555 1.953 3.182 2.896 3.182 4c0 1.104.373 2.047 1.118 2.828C5.046 7.61 5.946 8 7 8z"
  />
  <path
    className="tofill"
    d="M13.965 12.224c-.023-.35-.07-.73-.14-1.135a9.183 9.183 0 0 0-.263-1.13 5.494 5.494 0 0 0-.428-1.016 3.644 3.644 0 0 0-.616-.844 2.582 2.582 0 0 0-.85-.557 2.869 2.869 0 0 0-1.109-.209c-.06 0-.199.075-.417.224-.22.15-.466.316-.741.5-.275.184-.633.351-1.074.5A4.09 4.09 0 0 1 7 8.781c-.445 0-.887-.075-1.328-.224a4.62 4.62 0 0 1-1.074-.5 70.87 70.87 0 0 1-.74-.5c-.219-.149-.358-.224-.418-.224-.404 0-.774.07-1.108.209a2.581 2.581 0 0 0-.85.557 3.649 3.649 0 0 0-.617.844c-.179.33-.321.668-.427 1.015a9.183 9.183 0 0 0-.264 1.13c-.07.407-.116.785-.14 1.136-.022.35-.034.71-.034 1.078 0 .833.242 1.492.726 1.974.484.483 1.127.724 1.929.724h8.69c.802 0 1.445-.241 1.929-.724.484-.482.726-1.14.726-1.974 0-.368-.012-.727-.035-1.078z"
  />
</svg>
`;

exports[`ButtonElements/Styled VoteButtonStyle snapshot by default 1`] = `
.c0 {
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 38px;
  height: 38px;
  min-width: 38px;
  min-height: 38px;
  border-width: 2px;
  border-style: solid;
  border-radius: 50%;
  overflow: hidden;
  padding: 0;
  background-color: rgba(255,255,255,1);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.1s ease-in;
  -webkit-transition: transform 0.1s ease-in;
  transition: transform 0.1s ease-in;
}

.c0:hover,
.c0:focus {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

.c0.agree {
  color: rgba(80,122,31,1);
  border-color: rgba(80,122,31,1);
}

.c0.disagree {
  color: rgba(190,24,44,1);
  border-color: rgba(190,24,44,1);
}

.c0.neutral,
.c0.other {
  color: rgba(117,117,117,1);
  border-color: rgba(117,117,117,1);
}

.c0.animated {
  box-shadow: 0 0 0 0;
  -webkit-animation: kqtAfh 0.5s 1;
  animation: kqtAfh 0.5s 1;
  -webkit-transform: scale(0.9);
  -ms-transform: scale(0.9);
  transform: scale(0.9);
}

.c0.animated.disagree {
  -webkit-animation: fQXnsZ 0.5s 1;
  animation: fQXnsZ 0.5s 1;
}

.c0.agree.voted {
  background-color: rgba(80,122,31,1);
}

.c0.disagree.voted {
  background-color: rgba(190,24,44,1);
}

.c0.neutral.voted,
.c0.other.voted {
  background-color: rgba(117,117,117,1);
}

.c0.agree .tofill {
  fill: rgba(80,122,31,1);
}

.c0.disagree .tofill {
  fill: rgba(190,24,44,1);
}

.c0.neutral .tofill,
.c0.other .tofill {
  fill: rgba(117,117,117,1);
}

.c0.voted {
  color: rgba(255,255,255,1);
}

.c0.voted .tofill {
  fill: rgba(255,255,255,1);
}

.c0.voted:hover,
.c0.voted:focus {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

@media (min-width:360px) {
  .c0 {
    width: 43px;
    height: 43px;
    min-width: 43px;
    min-height: 43px;
  }
}

@media (min-width:1140px) {
  .c0 {
    width: 48px;
    height: 48px;
    min-width: 48px;
    min-height: 48px;
  }
}

<button
  className="c0"
/>
`;

exports[`ButtonElements/Styled VoteIconStyle snapshot by default 1`] = `
.c0 {
  position: absolute;
  top: 50%;
  left: 50%;
  z-index: 0;
  width: 16px;
}

.c0.agree {
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.c0.disagree {
  -webkit-transform: translate(-50%,-50%) rotate(180deg) scaleX(-1);
  -ms-transform: translate(-50%,-50%) rotate(180deg) scaleX(-1);
  transform: translate(-50%,-50%) rotate(180deg) scaleX(-1);
}

.c0.neutral,
.c0.other {
  -webkit-transform: translate(-50%,-50%) rotate(-90deg);
  -ms-transform: translate(-50%,-50%) rotate(-90deg);
  transform: translate(-50%,-50%) rotate(-90deg);
}

@media (min-width:360px) {
  .c0 {
    width: 22px;
  }
}

@media (min-width:1140px) {
  .c0 {
    width: 25px;
  }
}

<svg
  className="c0"
  height={25}
  viewBox="0 0 25 25"
  width={25}
>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      className="tofill"
      d="M5.388 20.031c.17-.17.255-.37.255-.602a.824.824 0 00-.255-.603.824.824 0 00-.602-.255.824.824 0 00-.603.255.824.824 0 00-.254.603.82.82 0 00.254.602c.17.17.37.255.603.255a.824.824 0 00.602-.255zm15.683-8.317c0-.455-.174-.855-.522-1.198-.348-.344-.745-.516-1.192-.516h-4.714c0-.518.214-1.23.643-2.136.428-.906.643-1.623.643-2.15 0-.875-.143-1.522-.429-1.942-.286-.42-.857-.63-1.714-.63-.232.233-.402.612-.51 1.14a24.555 24.555 0 01-.408 1.68c-.165.594-.43 1.083-.797 1.467-.196.205-.54.611-1.03 1.218-.037.045-.14.179-.309.402a26.028 26.028 0 01-.884 1.118 7.61 7.61 0 01-.536.59c-.16.156-.332.314-.515.475a2.31 2.31 0 01-.536.362 1.15 1.15 0 01-.475.12h-.429v8.572h.429c.116 0 .256.013.422.04.165.027.312.056.442.087.129.031.299.08.508.147a20.982 20.982 0 01.945.322c.214.076.343.122.388.14 1.884.652 3.41.978 4.58.978h1.621c1.714 0 2.571-.746 2.571-2.237 0-.232-.022-.482-.067-.75.268-.142.48-.377.637-.703a2.26 2.26 0 00.234-.984c0-.33-.08-.638-.241-.924.473-.447.71-.978.71-1.594 0-.223-.045-.47-.134-.743-.09-.273-.201-.485-.335-.636.286-.01.525-.22.716-.63.192-.41.288-.772.288-1.085zm1.715-.013c0 .795-.219 1.522-.657 2.183.08.295.121.603.121.924 0 .688-.17 1.33-.509 1.929.027.187.04.38.04.575 0 .902-.268 1.697-.803 2.384.009 1.242-.37 2.221-1.139 2.94-.768.719-1.781 1.078-3.04 1.078h-1.728c-.857 0-1.703-.1-2.538-.301-.834-.2-1.8-.493-2.9-.877C8.599 22.179 7.984 22 7.787 22H3.929c-.474 0-.878-.167-1.212-.502a1.652 1.652 0 01-.503-1.212v-8.572c0-.473.168-.877.503-1.212A1.652 1.652 0 013.929 10h3.67c.32-.214.932-.906 1.834-2.076a25.8 25.8 0 011.433-1.714c.214-.223.373-.605.476-1.145.102-.54.238-1.105.408-1.694.17-.59.446-1.072.83-1.447a1.7 1.7 0 011.206-.495c.75 0 1.424.145 2.022.435.598.29 1.054.743 1.366 1.36.313.615.469 1.446.469 2.49 0 .83-.214 1.688-.643 2.572h2.357c.929 0 1.732.339 2.41 1.018.68.678 1.019 1.477 1.019 2.397z"
      fill="#fff"
    />
    <path
      d="M0 0h25v25H0z"
    />
  </g>
</svg>
`;

exports[`ButtonElements/Styled WhiteButtonStyle snapshot by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  font-family: 'Trade Gothic Bold Condensed',Arial,sans-serif;
  font-size: 16px;
  line-height: 1;
  border: none;
  border-radius: 20px;
  text-transform: uppercase;
  padding: 12px 25px 8px;
}

.c1 {
  color: rgba(0,0,0,1);
  background-color: rgba(255,255,255,1);
}

.c1 svg {
  fill: rgba(0,0,0,1);
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    padding: 13px 25px 10px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
  }
}

<button
  className="c0 c1"
/>
`;
